--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,5 @@
 title: シャドバトラッカー
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+plugins:
+  - jekyll-remote-theme
+remote_theme: https://github.com/CloudCannon/hydra-jekyll-template
