--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 title: シャドバトラッカー
 description: トークンカウント・戦績記録・メタゲームなどの機能を通じて、シャドバWBユーザーの勝率UPを助けるツール
 theme: jekyll-theme-cayman
+show_downloads: true
